# Voxelity

./: CMakeLists.txt  Voxelity.proj.DotSettings
Voxelity/: Application.h  main.cpp
Voxelity/blocks/: BlockRegistry.cpp  BlockRegistry.h  BlockType.h
Voxelity/core/: Application.cpp  Application.h  Constants.h
Voxelity/core/service/: IService.h  ServiceLocator.h
Voxelity/core/utils/: Logger.cpp  Logger.h  Profiler.h
Voxelity/engine/: Application.cpp  Application.h
Voxelity/events/: Event.h  EventDispatcher.h  EventType.h  GLFWEventAdapter.cpp  GLFWEventAdapter.h
Voxelity/listeners/: CameraController.cpp  CameraController.h  PlayerController.cpp  PlayerController.h  ResizeListener.cpp  ResizeListener.h
Voxelity/math/: BlockFace.h  Direction.h  Frustrum.h  Frustum.h
Voxelity/rendering/: ChunkMesh.cpp  ChunkMesh.h  Shader.h  VoxelFace.h
Voxelity/rendering/camera/: Camera.cpp  Camera.h  CameraProjection.cpp  CameraProjection.h  CameraView.cpp  CameraView.h
Voxelity/rendering/graphics/: Pointer.cpp  Pointer.h
Voxelity/rendering/shader/: Shader.cpp
Voxelity/textures/: Image.cpp  Image.h  Texture.cpp
Voxelity/threading/: ConcurrentQueue.cpp  ConcurrentQueue.h  ThreadPool.cpp  ThreadPool.h
Voxelity/threading/generation/: ChunkGenerationThread.cpp  GenerationTask.cpp  GenerationTask.h
Voxelity/threads/generation/: ChunkGenerationThread.cpp  ChunkGenerationThread.h
Voxelity/threads/meshing/: ChunkMeshingThread.cpp  ChunkMeshingThread.h
Voxelity/voxelWorld/: Chunk.cpp  Chunk.h  ChunkData.h  ChunkLoader.cpp  ChunkManager.cpp  ChunkManager.h  ChunkRenderer.cpp  ChunkRenderer.h  ChunkRequestManager.cpp  ChunkRequestManager.h  ChunkStorage.cpp  ChunkStorage.h  Voxel.cpp  Voxel.h  World.cpp  World.h  WorldChunkData.cpp  WorldChunkData.h  WorldChunkRenderer.cpp  WorldChunkRenderer.h
Voxelity/voxelWorld/chunk/: Chunk.cpp  Chunk.h  ChunkData.cpp  ChunkData.h  ChunkLoader.cpp  ChunkLoader.h  ChunkManager.cpp  ChunkManager.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshData.cpp  ChunkMeshData.h  ChunkRenderer.cpp  ChunkRenderer.h  Voxel.cpp  Voxel.h  VoxelFace.h  VoxelStorage.cpp  VoxelStorage.h
Voxelity/voxelWorld/chunk/components/: ChunkData.h  ChunkMesh.h
Voxelity/voxelWorld/generators/: FlatGenerator.cpp  FlatGenerator.h  FlatWorldGenerator.h  IWorldGenerator.cpp  IWorldGenerator.h  NaturalWorldGenerator.cpp  NaturalWorldGenerator.h  NaturaldGenerator.cpp  NaturaldGenerator.h
Voxelity/voxelWorld/managers/: ChunkGenerationRequestManager.cpp  ChunkGenerationRequestManager.h  ChunkMeshingRequestManager.cpp  ChunkMeshingRequestManager.h  ChunkRequestManager.cpp
Voxelity/voxelWorld/meshBuilders/: ChunkDataNeighborhood.cpp  ChunkDataNeighborhood.h  FaceCullingMeshBuilder.cpp  FaceCullingMeshBuilder.h  IChunkMeshBuilder.h
Voxelity/voxelWorld/meshers/: FaceCullingMesher.cpp  FaceCullingMesher.h  IChunkMeshBuilder.h  IChunkMesher.h
Voxelity/voxelWorld/utils/: Raycaster.cpp  Raycaster.h
include/: Application.h  InputManager.h  Profiler.h  Renderer.h  Voxel.h
include/blocks/: BlockRegistry.h  BlockType.h
include/events/: EventDispatcher.h  EventListener.h  GLFWEventAdapter.h
include/listeners/: CameraController.h
include/rendering/: Camera.h  Mesh.h  Renderer.h  Shader.h  VoxelFace.h
include/textures/: Texture.h
include/voxelWorld/: Chunk.h  Voxel.h  World.h
include/voxelWorld/generators/: IWorldGenerator.h  NaturalWorldGenerator.h
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
resources/shaders/pointer/: fragment.glsl  vertex.glsl
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Application.cpp  Camera.cpp  InputManager.cpp  Profiler.cpp  Renderer.cpp  Shader.cpp  Voxel.cpp  glad.c
src/blocks/: BlockRegistry.cpp
src/events/: EventDispatcher.cpp
src/listeners/: CameraController.cpp
src/rendering/: Camera.cpp  ChunkMesh.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp
src/textures/: Texture.cpp
src/voxelWorld/: Chunk.cpp  Voxel.cpp  World.cpp
src/voxelWorld/generators/: FlatWorldGenerator.cpp  IWorldGenerator.cpp  NaturalWorldGenerator.cpp
